# LAUA

./: .gitignore  CLAUDE.md  laua_repl.py  pyproject.toml  test_conversation.py  test_monitor.py
config/: default.yaml
laua/: __init__.py  cli.py  config.py  ollama_client.py  scheduler.py
laua/executor/: audit.py  pty_session.py  safety.py
laua/memory/: context.py  schedules.py  store.py  workflows.py
laua/monitor/: recommendations.py  system.py
laua/planner/: orchestrator.py  planner.py  router.py
laua/tools/: core.py  docker_tool.py  file_manager.py  plugin_loader.py  registry.py
laua/ui/: app.py
laua/voice/: __init__.py  audio.py  stt.py  tts.py
tests/: test_audit_edge.py  test_context_manager.py  test_context_manager_edge.py  test_core_tools_edge.py  test_docker_edge.py  test_docker_tool.py  test_file_manager.py  test_file_manager_edge.py  test_memory_store.py  test_memory_store_edge.py  test_model_router.py  test_model_router_edge.py  test_monitor_edge.py  test_monitor_enhanced.py  test_plugin_loader.py  test_pty_edge.py  test_pty_session.py  test_registry_edge.py  test_safety.py  test_safety_edge.py  test_scheduler_parser.py  test_schedules_store.py  test_voice_audio.py  test_voice_tts.py
